--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# i18n
+spring.messages.basename=i18n/messages
+spring.messages.fallback-to-system-locale=false
+spring.messages.cache-duration=-1
+spring.messages.encoding=UTF-8
