--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.address=0.0.0.0
 spring.application.name=streamTech
 spring.datasource.url=jdbc:mysql://localhost:3306/${DATABASE}
 spring.datasource.username=${USERNAME}
