add jwt security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.messages.basename=i18n/messages
 spring.messages.fallback-to-system-locale=false
 spring.messages.cache-duration=-1
 spring.messages.encoding=UTF-8
+
+#Security
+jwt.secret=c3RyZWFtdGVjaGdlbmVyYWx2ZXJzaW9uMDEyMDI1ZW5jb2RlRGF0YQ==
+jwt.expiration=36000
