--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
+#server.address=0.0.0.0
+#spring.application.name=streamTech
+#spring.datasource.url=jdbc:mysql://localhost:3306/${DATABASE}
+#spring.datasource.username=${USERNAME}
+#spring.datasource.password=${PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
+#POSTGRES
 server.address=0.0.0.0
 spring.application.name=streamTech
-spring.datasource.url=jdbc:mysql://localhost:3306/${DATABASE}
+spring.datasource.url=jdbc:postgresql://{HOST}:5432/${DATABASE}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # i18n
@@ -14,5 +26,8 @@ spring.messages.cache-duration=-1
 spring.messages.encoding=UTF-8
 
 #Security
-jwt.secret=c3RyZWFtdGVjaGdlbmVyYWx2ZXJzaW9uMDEyMDI1ZW5jb2RlRGF0YQ==
+jwt.secret=${SECRET}
 jwt.expiration=36000
+
+#debbugin
+logging.level.org.springframework.security=DEBUG 
