fix in variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #POSTGRES
 server.address=0.0.0.0
 spring.application.name=streamTech
-spring.datasource.url=jdbc:postgresql://{HOST}:5432/${DATABASE}
+spring.datasource.url=jdbc:postgresql://${HOST}:5432/${DATABASE}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
